kubernetes/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-app
  namespace: games
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8082
  selector:
    name: game-app
